--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "upgrade": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
