--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "testimonial-slider",
+  "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "upgrade": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
