--- a/package.json
+++ b/package.json
@@ -7,14 +7,28 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.7",
+    "chart.js": "^4.3.0",
+    "concurrently": "^8.2.2",
+    "copy-to-clipboard": "^3.3.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-markdown": "^8.0.7",
+    "react-otp-input": "^3.1.1",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-super-responsive-table": "^5.2.1",
     "react-toastify": "^9.1.3",
+    "react-type-animation": "^3.0.1",
+    "showdown": "^2.1.0",
+    "swiper": "^9.3.1",
     "upgrade": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
@@ -22,7 +36,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "cd server && npm run dev",
+    "dev": "concurrently -n \"client,server\" -c \"bgBlue,bgYellow\" \"npm start\" \"npm run server\""
   },
   "eslintConfig": {
     "extends": [
