--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,17 @@
 
 # production
 /build
-.env
+
 
 # misc
-.DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+package-lock.json
+pnpm-lock.yaml
